syntax = "proto3";

package order;
option go_package = "github.com/Konscig/foodelivery-pet/internal/pb/orderpb";

import "order_models.proto";

message CreateOrderRequest {
    string user_id = 1;
    string rest_id = 2;
    repeated OrderItem items = 3;
}

message CreateOrderResponse {
    string order_id = 1;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}
